# JayBot

install/: local_setup.sh  setup.sh
install/jaybot_pkg/lib/jaybot_pkg/: ackermann_node  camera_node  encoder_node  hardware_interface_node  sonar_node
install/jaybot_pkg/share/jaybot_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/jaybot_pkg/: CMakeLists.txt  setup.cfg  setup.py
src/jaybot_pkg/jaybot_pkg/sonar/: sonar_node.py
src/jaybot_pkg/msg/: SonarStatus.msg
